# web-clone

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
build-resources/icons/: icon.icns
docs/: product-prototype.md
electron/: db.cjs  main.cjs  preload.cjs
scripts/: run-dev-electron.sh
scripts/release/: build_latest_json.cjs  collect_release_artifacts.cjs  package-release.cjs  publish-release.cjs  sync-version.cjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: api.ts  types.ts
src/styles/: app.css
