[package]
name = "web-clone-manager"
version = "0.1.0"
description = "Multi-account web clone manager built with Tauri"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
chrono = { version = "=0.4.38", features = ["serde"] }
home = "=0.5.11"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.214", features = ["derive"] }
serde_json = "=1.0.132"
serde_with = "=3.14.1"
sha2 = "=0.10.8"
tauri = { version = "=2.10.3", features = ["unstable"] }
tauri-plugin-sql = { version = "=2.3.2", features = ["sqlite"] }
time = "=0.3.44"
url = "=2.5.4"
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
